# Long_double_number

./: .gitignore  CMakeLists.txt  Long_double_number.sln  README.md
CMakeProject1/: CMakeLists.txt
Long_double_number/: .txt  CMakeLists.txt  Double.cpp  Double.h  Long_double_number.sln  Long_double_number.vcxproj  Long_double_number.vcxproj.filters  Source.cpp  arithmetic.cpp  helper_functions.cpp  method.cpp
Long_double_number/class_lib/: CMakeLists.txt  Double.cpp  Double.h
UnitTest1/: CMakeLists.txt  UnitTest.cpp  UnitTest1.cpp  UnitTest1.vcxproj
untitled/: CMakeLists.txt
